# vision_ardrone

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
launch/: start_tracker.launch  start_tracker.launch~
msg/: ControlCommand.msg  Detection.msg  Identity.msg  Status.msg
src/Controller/: Controller.cpp  Controller.cpp~
src/Detectors/: FACE_detector.cpp  UB_detector.cpp  UB_detector.cpp~
src/GUI/: RosThread.cpp  RosThread.h  main_GUI.cpp  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  mainwindow.ui  moc_mainwindow.cxx  ui_mainwindow.h
src/Recognizer/: Face_Recognizer.cpp  Face_Recognizer.h  Recognizer.cpp  Recognizer.cpp~
src/tools/: LKT_Tracker.cpp  LKT_Tracker.h  ObjectDetector.cpp  ObjectDetector.h  PDcontroller.cpp  PDcontroller.h  PreprocessFace.cpp  PreprocessFace.h
src/trash/: 2dController.cpp  ArdroneController.cpp  ControlAltitude.cpp  FlyRectangle.cpp  PedestrianDetector.cpp  PedestrianDetector.cpp~  Track.cpp  Track.h  UpperBodyDetector.cpp  UpperBodyDetector.cpp~  UpperBodyToFace.cpp  YawController.cpp  faceDetection.cpp  humanTracker.cpp  humanTracker.cpp~  master.cpp  moc_mainwindow.cxx  testQT.pro  webcam_openCV.cpp~
